fix the z-index and media qeury

--- a/css/style.css
+++ b/css/style.css
@@ -10,187 +10,6 @@
 	font-family: 'Roboto Slab', serif;
 }
 
-/****************/
-/*navigation bar*/
-/****************/
-
-/* small screen navbar */
-nav.sm-screen {
-	background: rgb(132, 96, 54);
-	height: 10vh;
-	width: 100vw;
-	position: fixed;
-	top: 0;
-	z-index: 10;	
-}
-
-/* small screen hidden menu */
-nav.sm-screen div.menu {
-	opacity: 0;
-	transition: all 0.8s ease; 
-}
-
-nav.sm-screen div.menu ul {
-	width: 100vw;
-	height: 85vh;
-	background-color: rgba(0, 0, 0, 0.7);
-	position: fixed;
-	top: 10vh;
-	left: 0;
-	text-align: center;	
-}
-nav.sm-screen div.menu ul li {
-	padding: 20px;
-}
-
-nav.sm-screen div.menu ul li a {
-	color: #fff;
-	text-transform: capitalize;
-	font-size: 1.1rem;
-	font-family: 'Roboto Slab', serif;	
-}		
-
-/* small screen logo */
-nav.sm-screen a {
-	color: #fff;
-	font-family: 'Kaushan Script', cursive;
-	font-size: 1.3rem;
-	font-weight: 200;
-	text-transform: capitalize;
-	text-align: center;
-}
-
-/* hamburger menu */
-nav.sm-screen div.menu-wrap {
-	position: relative;
-	margin-left: 10px;
-	height: 20px;
-	width: 20px;	
-}
-/* use the checkbox on top but invisible */
-nav.sm-screen .toggler {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	z-index: 5;
-	cursor: pointer;
-}
-/* hamburger menu div */
-nav.sm-screen div.hamburger {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;	
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-/* the middle line, and the top and bottom lines */
-nav.sm-screen div.hamburger div {
-	position: relative;
-	width: 100%;
-	height: 2px;
-	background-color: #fff;
-	transition: all 0.4s ease;
-}
-
-nav.sm-screen div.hamburger div::before,
-nav.sm-screen div.hamburger div::after {
-	content: '';
-	width: 100%;
-	height: 2px;
-	background-color: #fff;
-	position: absolute;
-	top: -5px;
-}
-
-nav.sm-screen div.hamburger div::after {
-	top: 5px;
-}
-/* the animation via checkbox */
-nav.sm-screen .toggler:checked + div.hamburger div {
-	transform: rotate(135deg);	
-}
-
-nav.sm-screen .toggler:checked + div.hamburger div::before, 
-nav.sm-screen .toggler:checked + div.hamburger div::after {
-	top: 0;
-	transform: rotate(90deg);
-}
-
-nav.sm-screen .toggler:checked ~ div.menu {
-	opacity: 1;
-}
-
-nav.sm-screen .toggler:checked:hover + div.hamburger div {
-	transform: rotate(225deg);
-} 
-
-/* large screen navbar */
-
-nav.lg-screen > ul {
-	background: rgb(132, 96, 54);
-	height: 10vh;
-	width: 100vw;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	color: #fff;
-	position: fixed;
-	top: 0;
-	z-index: 10;
-}
-
-nav.lg-screen > ul > li > a {
-	text-transform: uppercase;
-	font-size: 1.1rem;
-	font-weight: 200;
-	color: #fff;
-}
-nav.lg-screen > ul > li:first-child > a {
-	font-family: 'Kaushan Script', cursive;
-	font-size: 2rem;
-	text-transform: capitalize;
-}
-/* the logo */
-nav.lg-screen > ul > li:first-child {
-	margin-left: 2vw;
-	margin-right: 15vw;
-}
-nav.lg-screen > ul > li:last-child {
-	margin-right: 3vw;
-}
-nav.lg-screen > ul > li {
-	padding: 20px 0;
-}
-/* pull down menu */
-nav.lg-screen > ul > li > ul {
-	background: rgb(132, 96, 54);
-	position: absolute;
-	top: 9.7vh;
-	display: none;
-}
-nav.lg-screen > ul > li:hover > ul,
-nav.lg-screen > ul > li > ul:hover {
-	display: block;
-}
-nav.lg-screen > ul > li > ul > li {
-	padding: 1rem;
-	
-}
-nav.lg-screen > ul > li > ul > li > a {
-	text-transform: uppercase;
-	color: #fff;
-}
-
-
-
-
-
 /* home page */
 section.hero {
 	position: relative;
@@ -234,7 +53,6 @@ ul.products:hover::after {
 	background: rgba(0, 0, 0, 0);
 	cursor: pointer;
 }
-
 ul.products li {
 	display: block;
 	position: absolute;
@@ -250,14 +68,14 @@ ul.products li {
     animation: slide 18s linear infinite;
 }
 ul.products li:nth-child(1) {
-	background-image: url('image/choco-1.jpg');
+	background-image: url('../image/choco-1.jpg');
 }
 ul.products li:nth-child(2) {
-	background-image: url('image/choco-2.jpeg');
+	background-image: url('../image/choco-2.jpeg');
 	animation-delay: 6s;
 }
 ul.products li:nth-child(3) {
-	background-image: url('image/choco-3.jpg');
+	background-image: url('../image/choco-3.jpg');
 	animation-delay: 12s;
 }
 
@@ -314,12 +132,6 @@ div.about-container {
 	margin: auto;	
 }
 
-section.process {
-	
-
-	
-}
-
 div.process-container {
 	margin-top: 5rem;
 	display: flex;
@@ -352,16 +164,16 @@ ol.description li:first-child {
 
 div.slide-wrapper {
 	/* size of one slide */
-	width: 35vw;
-	height: 75vh;
+	width: 400px;
+	height: 550px;
 	overflow: hidden;
 	position: relative;
 	box-shadow: 2px 0px 10px #000, -2px 0px 10px #fafafa;
 }
 ul.slide-container {
 	/* slide width x 8 */
-	width: 280vw;
-	height: 80vh;
+	width: 3200px;
+	height: 550px;
 	display: flex;
 	justify-content: flex-start;
 	transition: transform 0.8s ease-in-out;
@@ -369,35 +181,35 @@ ul.slide-container {
 
 ul.slide-container li {
 	flex-grow: 1;
-	height: 80vh;
+	height: 550px;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;	
 }
 
 ul.slide-container li:nth-child(1) {
-	background-image: url('image/process-1.jpg');
+	background-image: url('../image/process-1.jpg');
 }
 ul.slide-container li:nth-child(2) {
-	background-image: url('image/process-2.jpg');
+	background-image: url('../image/process-2.jpg');
 }
 ul.slide-container li:nth-child(3) {
-	background-image: url('image/process-3.jpg');
+	background-image: url('../image/process-3.jpg');
 }
 ul.slide-container li:nth-child(4) {
-	background-image: url('image/process-5.png');
+	background-image: url('../image/process-5.png');
 }
 ul.slide-container li:nth-child(5) {
-	background-image: url('image/process-6.png');
+	background-image: url('../image/process-6.png');
 }
 ul.slide-container li:nth-child(6) {
-	background-image: url('image/process-7.jpg');
+	background-image: url('../image/process-7.jpg');
 }
 ul.slide-container li:nth-child(7) {
-	background-image: url('image/process-8.jpg');
+	background-image: url('../image/process-8.jpg');
 }
 ul.slide-container li:nth-child(8) {
-	background-image: url('image/choco-3.jpg');
+	background-image: url('../image/choco-3.jpg');
 }
 
 div.slide-wrapper a {
@@ -451,16 +263,16 @@ button {
 /* media query */
 
 @media screen and (max-width: 900px) {
-	nav.lg-screen > ul > li:first-child > a {
+	body nav.lg-screen > ul > li:first-child > a {
 		font-size: 1.2rem;
 	}
 
-	nav.lg-screen > ul > li:first-child {
+	body nav.lg-screen > ul > li:first-child {
 		margin-left: 0vw;
     	margin-right: 0vw;
 	}
 
-	nav.lg-screen > ul > li > a {
+	body nav.lg-screen > ul > li > a {
 		font-size: 0.8rem;
 	}	
 }
@@ -476,7 +288,7 @@ button {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		justify-content: center;
-		align-items: center;
+		align-items: center;		
 	}
 	section.hero {
 		display: flex;
@@ -487,7 +299,24 @@ button {
 		position: relative;
 		width: 100%
 	}
-
+	div.process-container {
+		flex-direction: column;
+	}
+	ol.description {
+		width: 100%;
+		margin: auto;
+		height: 250px;
+	}
+	ol.description li {
+		width: 95%;
+		padding: 1rem;
+		border-radius: 8px;		
+	}
+	h1 {
+		font-size: 2rem;
+		margin: 2rem 1rem 1rem;
+	}
+	
 }
 
 
